# chcode

./: .gitignore  CHANGELOG.md  README.md  README_en.md  README_zh.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
chcode/: __main__.py  agent_setup.py  chat.py  cli.py  config.py  display.py  i18n.py  prompts.py  session.py  skill_manager.py  strings.py  vision_config.py
chcode/agents/: loader.py  runner.py
chcode/strings/: __init__.py  en.py  zh.py
chcode/utils/: __init__.py  enhanced_chat_openai.py  frontmatter.py  git_checker.py  git_manager.py  json_utils.py  multimodal.py  session.py  skill_loader.py  skill_manager.py  text_utils.py  tool_result_pipeline.py  tools.py
chcode/utils/shell/: semantics.py  session.py
tests/: conftest.py  test_agent_setup.py  test_agent_setup_extended.py  test_analyze_image.py  test_chat_repl.py  test_chat_repl_extended.py  test_cli.py  test_cli_extended.py  test_config.py  test_config_extended.py  test_config_pure.py  test_coverage_gaps.py  test_display.py  test_git_manager.py  test_git_manager_extended.py  test_i18n.py  test_multimodal.py  test_multimodal_middleware.py  test_prompts.py  test_runner.py  test_runner_extended.py  test_session.py  test_shell_session_extended.py  test_skill_manager_extended.py  test_tool_result_pipeline.py  test_tools.py  test_tools_extended.py  test_vision.py  test_vision_config.py
